https://youtu.be/5WS8Y0dS1-o

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elisa & Adriano</title>
+    <title>Elisa & Adriano: Photo Gallery</title>
+    <meta name="description" content="A beautiful photo gallery of Elisa and Adriano's memorable moments.">
+    <meta name="keywords" content="photo gallery, memories, Elisa, Adriano, love, photography">
     <meta name="theme-color" content="#ffd1dc">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="styles.css">
@@ -11,90 +13,88 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <h1 class="Gallery-title">Elisa & Adriano: Gallery <i class="fas fa-camera"></i></h1>
-    <div class="Gallery">
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
+    <header>
+        <h1 class="gallery-title">Elisa & Adriano: Gallery <i class="fas fa-camera"></i></h1>
+    </header>
+    <main>
+        <div class="gallery">
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
+            <div class="picture">
+                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <div class="picture-note"><span>Esto no es música es droga</span></div>
+            </div>
         </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/inmortales.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Esto no es música es droga</span></div>
-        </div>
-        <div class="Picture">
-            <img class="Picture-img" src="img/puredrug.jpeg" alt="Descripción de la imagen">
-            <div class="Picture-note"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sit omnis inventore enim nemo suscipit quis quasi adipisci eius officiis reprehenderit amet eum, minima eaque impedit! Ea ad officiis ut!</span></div>
-        </div>
-    </div>
-
+    </main>
+    <footer>
+        <p>&copy; 2024 Elisa & Adriano</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
