https://youtu.be/vOapgSfSN1s

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#ffd1dc">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="img/heart.png">
+    <link rel="icon" type="image/png" href="https://d29fhpw069ctt2.cloudfront.net/icon/image/84584/preview.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -19,75 +19,63 @@
     <main>
         <div class="gallery">
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-v" src="img/aye15.jpeg" alt="nuestros heladitos">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-v" src="img/aye14.jpeg" alt="mi novia y messi">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-v" src="img/aye13.jpeg" alt="viendo ropita para nuestro futuro bb">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-v" src="img/aye12.jpeg" alt="foto de mi noviecita antes de comer">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-h" src="img/aye11.jpeg" alt="otra foto after sex xd">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-h" src="img/aye10.jpeg" alt="foto after sex">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-h" src="img/aye9.jpeg" alt="foto mimiendo (yo mimiendo xd)">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-v" src="img/aye8.jpeg" alt="te queda hermoso el flequillo">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-h" src="img/aye7.jpeg" alt="foto de mi novia apoyada en mi hombro">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-v" src="img/aye6.jpeg" alt="foto en el ascensor">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-v" src="img/aye5.jpeg" alt="foto depués del partido">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-h" src="img/aye4.jpeg" alt="cuando me acompañó al partido">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
+                <img class="picture-img picture-img-v" src="img/aye3.jpeg" alt="cómo se le da me encorazona a una foto de wsp">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-v" src="img/aye2.jpeg" alt="dandole beso en la cabeza a mi amorcito">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
             <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
-            </div>
-            <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
-            </div>
-            <div class="picture">
-                <img class="picture-img" src="img/inmortales.jpeg" alt="álbum inmortales barderos">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
-            </div>
-            <div class="picture">
-                <img class="picture-img" src="img/puredrug.jpeg" alt="álbum pure drug barderos">
+                <img class="picture-img picture-img-v" src="img/aye1.jpeg" alt="foto de perfil de nosotros">
                 <div class="picture-note"><span>Esto no es música es droga</span></div>
             </div>
         </div>
