https://youtu.be/m5s1cqPjFYQ

--- a/index.html
+++ b/index.html
@@ -20,63 +20,63 @@
         <div class="gallery">
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye15.jpeg" alt="nuestros heladitos">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Te amo mucho Elisa. Gracias por todo. Eres y siempre serás el amor de mi vida</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye14.jpeg" alt="mi novia y messi">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Verte feliz me da una satisfacción inmensa, tu felicidad es mi mayor regalo.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye13.jpeg" alt="viendo ropita para nuestro futuro bb">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Me encanta cuando hablamos sobre nuestro futuro.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye12.jpeg" alt="foto de mi noviecita antes de comer">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Lo puedo notar en tu mirada, en tus preciosos y brillantes ojos.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-h" src="img/aye11.jpeg" alt="otra foto after sex xd">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note fixed-11"><span>Mi amor por ti es sincero, y estoy seguro de que el tuyo lo es también.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-h" src="img/aye10.jpeg" alt="foto after sex">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note fixed-10"><span>...tus abrazos, tus besos, tus gestos, tu ternura. Eres mi mundo entero.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-h" src="img/aye9.jpeg" alt="foto mimiendo (yo mimiendo xd)">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note fixed-9"><span>Gracias por la paz y tranquilidad que has traído a mi vida. Amo todo de ti...</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye8.jpeg" alt="te queda hermoso el flequillo">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Todo lo que hago es siempre pensando en ti, eres mi motor y motivo.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-h" src="img/aye7.jpeg" alt="foto de mi novia apoyada en mi hombro">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note fixed-7"><span>Gracias por permitirme cuidar de ti, haría cualquier cosa para protegerte.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye6.jpeg" alt="foto en el ascensor">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Todos esos momentos, cada uno de ellos, se vuelven únicos a tu lado.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye5.jpeg" alt="foto depués del partido">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>...o cuando pasábamos tiempo juntos estudiando en la universidad.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-h" src="img/aye4.jpeg" alt="cuando me acompañó al partido">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note fixed-4"><span>Cada vez que me acompañabas a mis partidos, nuestras salidas a caminar, conversar...</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye3.jpeg" alt="cómo se le da me encorazona a una foto de wsp">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Decidí entregarte mi corazón por completo porque sabía que lo cuidarías.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye2.jpeg" alt="dandole beso en la cabeza a mi amorcito">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Tu forma de ser me hizo desear conocerte más y darte todo el amor que mereces.</span></div>
             </div>
             <div class="picture">
                 <img class="picture-img picture-img-v" src="img/aye1.jpeg" alt="foto de perfil de nosotros">
-                <div class="picture-note"><span>Esto no es música es droga</span></div>
+                <div class="picture-note"><span>Desde el primer momento en que te vi, sentí una gran conexión entre nosotros.</span></div>
             </div>
         </div>
     </main>
